add pytorch linear regression

--- a/_posts/2020-06-18-two_sum.md
+++ b/_posts/2020-06-18-two_sum.md
@@ -3,8 +3,12 @@ title: Two Sum
 date: 2020-06-18 20:44
 categories:
 - Leetcode
+- array
+- 数组
 tags:
 - Leetcode
+- array
+- 数组
 ---
 
 ## Question
